syntax = "proto3";

package rpc;

option go_package = "./rpc";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

service User {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}